68_Bugfix CSS Grid for Collapse Button Fixed

--- a/UrFriends/src/index.css
+++ b/UrFriends/src/index.css
@@ -175,6 +175,7 @@ body {
   grid-template-rows: repeat(3, auto);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+
 }
 
 .contact-expanded-recent-convos {
@@ -182,7 +183,8 @@ body {
 }
 
 .contact-expanded-button-div {
-  grid-area: 3 / 1 / 3 / 5;
+  grid-area: 4 / 1 / 5 / 5;
+  background-color: purple;
   display: flex;
   justify-content: center;
 }
